--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_624bdd623855a29"
   },
   "dependencies": {
     "next": "16.0.10",
@@ -14,13 +17,26 @@
     "react-dom": "19.2.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
+    "@storybook/addon-a11y": "^10.1.9",
+    "@storybook/addon-docs": "^10.1.9",
+    "@storybook/addon-vitest": "^10.1.9",
+    "@storybook/nextjs-vite": "^10.1.9",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/coverage-v8": "^4.0.16",
+    "chromatic": "^13.3.4",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "eslint-plugin-storybook": "^10.1.9",
+    "playwright": "^1.57.0",
+    "storybook": "^10.1.9",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^7.3.0",
+    "vitest": "^4.0.16"
   }
 }
