chore: bootstrap Next.js App Router projects with shared design system and visual regression

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 # Chromatic Project Token
 # Get your token from: https://www.chromatic.com/docs/cli
-CHROMATIC_PROJECT_TOKEN=chpt_624bdd623855a29
+# Replace YOUR_TOKEN_HERE with your actual Chromatic project token
+CHROMATIC_PROJECT_TOKEN=YOUR_TOKEN_HERE
